tests/rosetta/out/Rust/anti-primes.error
rustc error: exit status 1
error[E0308]: mismatched types
 --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:9:21
  |
9 |         while (i <= n as f64) / (2 as f64) {
  |                     ^^^^^^^^ expected integer, found `f64`

error[E0277]: can't compare `{integer}` with `f64`
 --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:9:18
  |
9 |         while (i <= n as f64) / (2 as f64) {
  |                  ^^ no implementation for `{integer} < f64` and `{integer} > f64`
  |
  = help: the trait `PartialOrd<f64>` is not implemented for `{integer}`
  = help: the following other types implement trait `PartialOrd<Rhs>`:
            f128
            f16
            f32
            f64
            i128
            i16
            i32
            i64
          and 8 others

error[E0369]: cannot divide `bool` by `f64`
 --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:9:31
  |
9 |         while (i <= n as f64) / (2 as f64) {
  |               --------------- ^ ---------- f64
  |               |
  |               bool

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:26:24
   |
26 |                 line = format!("{}{}", format!("{}{}", line, n.to_string()), " ");
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:32:54
   |
32 |         line = &line[0 as usize..line.len() as i32 - 1 as usize];
   |                                                      ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:32:34
   |
32 |         line = &line[0 as usize..line.len() as i32 - 1 as usize];
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/TestMochiToRustanti-primes2400921483/001/prog.rs:32:52
   |
32 |         line = &line[0 as usize..line.len() as i32 - 1 as usize];
   |                                                    ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0369.
For more information about an error, try `rustc --explain E0277`.
